# rqt_fsw_bridge_dictionary

./: package.xml  plugin.xml  setup.cfg  setup.py
resource/: BridgeDictionaryWidget.ui  BridgeWidget.ui
scripts/: rqt_fsw_bridge  rqt_fsw_bridge_dictionary
src/rqt_fsw_bridge/: bridge.py  bridge_dictionary_info.py  bridge_dictionary_widget.py  bridge_info.py  bridge_widget.py  confirm_dialog.py  dictionary_info.py  main.py
src/rqt_fsw_bridge_dictionary/: bridge_dictionary.py  bridge_dictionary_widget.py  confirm_dialog.py  dictionary_info.py  main.py
