<package format="2">
  <name>rqt_fsw_bridge</name>
  <version>1.0.0</version>
  <description>FSW Bridge UI package</description>
  <maintainer email="swhart@traclabs.com">Stephen Hart</maintainer>

  <license>BSD</license>

  <!-- Some tests are ASL 2.0 -->
  <license>Apache License 2.0</license>

  <url type="repository">https://github.com/traclabs/rqt_fsw_bridge</url>

  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2topic</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>rqt_py_common</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_xmllint</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>

</package>
